# carolina

./: .gitignore  CMakeLists.txt  README.md  format.sh
code_generation/: CMakeLists.txt.in  histograms_1d.cpp.in  histograms_2d.cpp.in
include/: analysis.hpp  analysis_62Ni_68Zn.hpp  analysis_64Ni.hpp  analysis_78Kr.hpp  branch.hpp  channel.hpp  code_generation.hpp.in  coincidence_matrix.hpp  command_line_parser.hpp  configure_histograms_1d.hpp.in  configure_histograms_2d.hpp.in  counter_detector.hpp  counter_detector_channel.hpp  detector.hpp  detector_group.hpp  detector_setup.hpp  detector_setup_64Ni.hpp  detector_setup_64Ni_531.hpp  detector_setup_78Kr.hpp  detector_setup_mvme.hpp  detectors.hpp  energy_sensitive_detector.hpp  energy_sensitive_detector_channel.hpp  energy_vs_event_number.hpp.in  event_counter.hpp  histogram_properties.hpp  mdpp16.hpp  module.hpp  progress_printer.hpp  scaler_module.hpp  sis3316.hpp  tfile_utilities.hpp  v830.hpp  vme.hpp
include/analysis/: analysis.hpp  coincidence_matrix.hpp  histogram_properties.hpp
include/detectors/: CMakeLists.txt  channel.hpp  counter_detector.hpp  counter_detector_channel.hpp  detector.hpp  detector_group.hpp  energy_sensitive_detector.hpp  energy_sensitive_detector_channel.hpp
include/experiments/: 24Mg.hpp  31P.hpp  62Ni_68Zn.hpp  64Ni.hpp  73Ge.hpp  78Kr.hpp  analysis_62Ni_68Zn.hpp  analysis_64Ni.hpp  analysis_78Kr.hpp  analysis_include.hpp  test.hpp
include/io/: calibration_function.hpp  command_line_parser.hpp  gate.hpp  polynomial.hpp  progress_printer.hpp  split_tree.hpp.in  tfile_utilities.hpp
include/modules/: branch.hpp  digitizer_module.hpp  mdpp16.hpp  mdpp16_qdc.hpp  mdpp16_scp.hpp  module.hpp  scaler_module.hpp  sis3316.hpp  v830.hpp  vme.hpp
include/programs/: calibrate_tree.hpp.in  energy_vs_time.hpp.in  histograms_1d_raw.hpp.in
include/reader/: mvlclst.hpp  mvlclst_dictionary.hpp  reader.hpp  reader.hpp.in  tree.hpp
include/test/: inverse_calibration.hpp  sampler.hpp.in  test_histograms_1d.hpp.in  test_polynomial.hpp
source/: CMakeLists.txt  analysis.cpp  calibrate_tree.cpp  channel.cpp  coincidence_matrix.cpp  command_line_parser.cpp  configure_histograms_1d.cpp  configure_histograms_2d.cpp  configure_tree.cpp  counter_detector.cpp  counter_detector_channel.cpp  detector.cpp  detector_setup.cpp  digitizer_module.cpp  energy_sensitive_detector.cpp  energy_sensitive_detector_channel.cpp  energy_vs_event_number.cpp  energy_vs_time.cpp  event_counter.cpp  histograms.cpp  histograms_1d.cpp  histograms_1d_raw.cpp  histograms_1d_text.cpp  histograms_2d.cpp  mdpp16.cpp  multitask.cpp  multithread_merge_output.cpp  multithread_screen.cpp  progress_printer.cpp  sis3316.cpp  split_tree.cpp  tfile_utilities.cpp  v830.cpp
source/analysis/: CMakeLists.txt  analysis.cpp  coincidence_matrix.cpp
source/detectors/: CMakeLists.txt  channel.cpp  counter_detector.cpp  counter_detector_channel.cpp  detector.cpp  energy_sensitive_detector.cpp  energy_sensitive_detector_channel.cpp
source/io/: CMakeLists.txt  command_line_parser.cpp  histograms_1d_text.cpp  polynomial.cpp  progress_printer.cpp  split_tree.cpp  tfile_utilities.cpp
source/modules/: CMakeLists.txt  digitizer_module.cpp  mdpp16.cpp  mdpp16_qdc.cpp  mdpp16_scp.cpp  scaler_module.cpp  sis3316.cpp  v830.cpp
source/programs/: CMakeLists.txt  calibrate_tree.cpp  energy_vs_time.cpp  histograms_1d.cpp  histograms_1d_raw.cpp  histograms_2d.cpp  history.cpp  mvlclst_to_root.cpp
source/reader/: CMakeLists.txt  mvlclst.cpp  tree.cpp
source/test/: CMakeLists.txt  inverse_calibration.cpp  sampler.cpp  test_histograms_1d.cpp  test_histograms_1d_raw.cpp  test_polynomial.cpp  test_tfile_utilities.cpp
